--- a/.gitignore
+++ b/.gitignore
@@ -19,10 +19,13 @@ lib64/
 parts/
 sdist/
 ctc/output/log/
-.idea/
+.idea
+
+*.csv
+*.model
+*.pkl
+*.svm
+*.zip
+
 1_titanic/.idea/
-1_titanic/model/
-1_titanic/data/
 2_creditcardfraud/.idea/
-2_creditcardfraud/model/
-2_creditcardfraud/data/
